# batcave

./: .env.example  .gitignore  01_sourcing_design.md  02_scoring_design.md  03_architecture_and_build_plan.md  CP_platform_one_pager.docx  Common_Partners_Platform_Blueprint.docx  README.md
app/: .env.example  .gitignore  next.config.mjs  package-lock.json  package.json  (+2 more)
workers/: CONTRACT.md  pyproject.toml  seed.csv
workers/cp_workers/: cli.py  config.py  db.py  jobs.py
workers/cp_workers/connectors/: __init__.py  companies_house.py  discovery.py
workers/cp_workers/enrichment/: digital_maturity.py  distribution.py  financials.py  orchestrate.py  reviews.py  social.py  website.py  webtech.py
workers/cp_workers/scoring/: calibration.py  digest.py  dimensions.py  gate.py  llm_dimensions.py  pipeline.py  pregate.py  red_flags.py  value_angles.py  watchlist.py
workers/cp_workers/signals/: __init__.py  consolidation.py  latent_upside.py  orchestrate.py  succession.py
workers/prompts/: score_qualitative.md  sector_classify.md  website_extract.md
workers/scripts/: build_seed_from_ch.py
workers/tests/: fakes.py  test_calibration.py  test_companies_house.py  test_consolidation.py  test_digest.py  test_digital_maturity.py  test_dimensions.py  test_discovery.py  test_distribution.py  test_financials.py  test_gate.py  test_latent_upside.py  test_llm_dimensions.py  test_orchestrate.py  test_pipeline.py  test_pregate.py  test_red_flags.py  test_reviews.py  test_social.py  test_succession.py  test_value_angles.py  test_watchlist.py  test_website.py  test_webtech.py
(+71 files in other folders)
