[project]
name = "cp-workers"
version = "0.1.0"
description = "Common Partners Platform — sourcing, enrichment, and scoring workers"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "supabase>=2.5",
    "anthropic>=0.34",
    "tenacity>=8.3",
    "trafilatura>=1.11",
    "playwright>=1.45",
    "openpyxl>=3.1",
    "python-dotenv>=1.0",
    "stream-read-xbrl>=0.1.3",
    "click>=8.1",
    "resend>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "freezegun>=1.5",
    "respx>=0.21",
]

[project.scripts]
cp-workers = "cp_workers.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cp_workers*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
